# prompti

./: pyproject.toml
custom_prompts/: testing_prompt.pkl
custom_prompts/testing_prompts/: testing_prompt.pkl
example/: example.yaml
prompti/: run.py
prompti/evaluation/: metrics.py
prompti/prompts/: base.py  example.py  prompt_loader.py
prompti/utils/: path_manager.py  save.py  string_utils.py
